--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,9 @@ body {
 .App {
   text-align: center;
 }
-
+.pageswitch {
+  margin-top: 50px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -18,12 +20,12 @@ body {
   }
 }
 
-.App-header {
+.header {
   background-color: #282c34;
-  min-height: 100vh;
+
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
