--- a/src/Sidebar/Sidebar.scss
+++ b/src/Sidebar/Sidebar.scss
@@ -1,10 +1,10 @@
 .sidebar-container {
   position: fixed;
-  top: 0;
-  right: 0;
-  height: 100%; 
-  width: 200px; 
-  background-color: #f0f0f0; 
+  top: 250px;
+  right: 10px;
+  height: 100%;
+  width: 300px;
+  background-color: #f0f0f0;
   display: flex;
   flex-direction: column;
   padding: 20px;
