--- a/src/Navbar/Navbar.scss
+++ b/src/Navbar/Navbar.scss
@@ -32,6 +32,10 @@
   padding: 10px 24px;
   color: #494949;
   position: relative;
+ 
+  &--1 {
+    background-color: #df2020;
+  }
 }
 
 .navbar-container ul li::after {
@@ -44,9 +48,7 @@
   right: 0;
 }
 
-.navbar-container ul li:last-child::after {
-  display: none;
-}
+
 
 @keyframes scroll {
   from {
