--- a/src/Graph/Graph.scss
+++ b/src/Graph/Graph.scss
@@ -1,8 +1,10 @@
 .graph-container {
-  
+  margin-left: 50px;
   display: flex;
   align-items: center;
   justify-self: center;
-  width: 900px;
+  width: 75%;
   height: 900px;
+  border-radius: 10px;
+  background-color: white;
 }
