--- a/src/Sidebar/Sidebar.scss
+++ b/src/Sidebar/Sidebar.scss
@@ -4,11 +4,14 @@
   right: 10px;
   height: 100%;
   width: 300px;
-  background-color: #f0f0f0;
+  background-color: white;
   display: flex;
   flex-direction: column;
   padding: 20px;
-}
-.h1 {
-  background-color: #f0f0f0;
+  border-radius: 10px;
+
+  &--header {
+    background-color: #f0f0f0;
+    border-radius: 10px;
+  }
 }
